--- a/LazzyBee/Home/HomeViewController_iPad.xib
+++ b/LazzyBee/Home/HomeViewController_iPad.xib
@@ -32,34 +32,34 @@
                     <rect key="frame" x="0.0" y="404" width="768" height="116"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ENb-XN-REN">
-                            <rect key="frame" x="25" y="0.0" width="717" height="45"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <animations/>
-                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <state key="normal" title="Start Learning" backgroundImage="button_long.png"/>
-                            <connections>
-                                <action selector="btnStudyClick:" destination="-1" eventType="touchUpInside" id="jpY-aC-qqe"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="K0P-2z-oXD">
-                            <rect key="frame" x="25" y="58" width="353" height="45"/>
+                            <rect key="frame" x="8" y="58" width="374" height="45"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <state key="normal" title="Incoming List" backgroundImage="button_short.png"/>
+                            <state key="normal" title="Incoming List" backgroundImage="button_short_ipad.png"/>
                             <connections>
                                 <action selector="btnStudiedListClick:" destination="-1" eventType="touchUpInside" id="4bL-xF-wne"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="E9M-1w-NbD">
-                            <rect key="frame" x="389" y="58" width="353" height="45"/>
+                            <rect key="frame" x="386" y="58" width="374" height="45"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                             <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <state key="normal" title="More Words" backgroundImage="button_short.png"/>
+                            <state key="normal" title="More Words" backgroundImage="button_short_ipad.png"/>
                             <connections>
                                 <action selector="btnMoreWordClick:" destination="-1" eventType="touchUpInside" id="CfT-nD-gTo"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ENb-XN-REN">
+                            <rect key="frame" x="8" y="0.0" width="752" height="45"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <state key="normal" title="Start Learning" backgroundImage="button_long_ipad.png"/>
+                            <connections>
+                                <action selector="btnStudyClick:" destination="-1" eventType="touchUpInside" id="jpY-aC-qqe"/>
                             </connections>
                         </button>
                     </subviews>
@@ -74,7 +74,7 @@
     </objects>
     <resources>
         <image name="big_logo.png" width="1024" height="1024"/>
-        <image name="button_long.png" width="334" height="40"/>
-        <image name="button_short.png" width="150" height="40"/>
+        <image name="button_long_ipad.png" width="667" height="40"/>
+        <image name="button_short_ipad.png" width="300" height="40"/>
     </resources>
 </document>
