--- a/LazzyBee/Mainsreen/StudyWordViewController.xib
+++ b/LazzyBee/Mainsreen/StudyWordViewController.xib
@@ -160,6 +160,7 @@ Again</string>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <gestureRecognizers/>
             <point key="canvasLocation" x="381" y="375"/>
         </view>
     </objects>
