--- a/LazzyBee/Note/NoteFullView.xib
+++ b/LazzyBee/Note/NoteFullView.xib
@@ -7,37 +7,102 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NoteFullView">
             <connections>
+                <outlet property="txtView" destination="BYV-nj-Vng" id="H9W-eB-GP2"/>
                 <outlet property="view" destination="img-Ve-RfE" id="Jdx-uS-Ve9"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="img-Ve-RfE">
             <rect key="frame" x="0.0" y="0.0" width="300" height="330"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="k6X-h9-cfV">
-                    <rect key="frame" x="8" y="8" width="284" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="k6X-h9-cfV">
+                    <rect key="frame" x="8" y="5" width="120" height="21"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <animations/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                     <color key="textColor" red="1" green="0.7843137255" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" text="Add note here" textAlignment="natural" id="BYV-nj-Vng">
-                    <rect key="frame" x="8" y="37" width="284" height="285"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" textAlignment="natural" id="BYV-nj-Vng">
+                    <rect key="frame" x="8" y="32" width="284" height="262"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="W9R-19-hWC"/>
+                    </connections>
                 </textView>
+                <view contentMode="scaleToFill" id="rH8-jP-Ssv">
+                    <rect key="frame" x="0.0" y="32" width="300" height="1"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" id="8ev-jH-ucH">
+                    <rect key="frame" x="0.0" y="297" width="300" height="1"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <animations/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_holder.png" id="fZx-5J-Fj0">
+                    <rect key="frame" x="137" y="4" width="30" height="15"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                    <gestureRecognizers/>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="blb-wP-dtj" appends="YES" id="89D-Hi-MWC"/>
+                    </connections>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8ee-gt-PDG">
+                    <rect key="frame" x="270" y="0.0" width="30" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="tintColor" red="0.75808869950000002" green="0.0" blue="0.17734529260000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" image="cancel.png"/>
+                    <connections>
+                        <action selector="btnCloseClick:" destination="-1" eventType="touchUpInside" id="3Pr-Qc-vNy"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zMx-qF-ry5">
+                    <rect key="frame" x="241" y="299" width="60" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                    <animations/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="Save"/>
+                    <connections>
+                        <action selector="btnSaveClick:" destination="-1" eventType="touchUpInside" id="fGQ-A8-xsG"/>
+                    </connections>
+                </button>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="220" y="253"/>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="umS-lq-2OX" appends="YES" id="nfT-v2-oP6"/>
+            </connections>
+            <point key="canvasLocation" x="231" y="253"/>
         </view>
+        <panGestureRecognizer minimumNumberOfTouches="1" id="blb-wP-dtj">
+            <connections>
+                <action selector="panGestureHandle:" destination="-1" id="cUv-9W-iRI"/>
+                <outlet property="delegate" destination="-1" id="DhI-qZ-zmh"/>
+            </connections>
+        </panGestureRecognizer>
+        <panGestureRecognizer minimumNumberOfTouches="1" id="umS-lq-2OX">
+            <connections>
+                <action selector="panGestureHandle:" destination="-1" id="Win-uy-5vZ"/>
+                <outlet property="delegate" destination="-1" id="G4K-T4-8j0"/>
+            </connections>
+        </panGestureRecognizer>
     </objects>
+    <resources>
+        <image name="cancel.png" width="30" height="30"/>
+        <image name="ic_holder.png" width="30" height="25"/>
+    </resources>
 </document>
