--- a/LazzyBee/Home/BarGraphViewController.xib
+++ b/LazzyBee/Home/BarGraphViewController.xib
@@ -11,6 +11,7 @@
                 <outlet property="graphView" destination="322-XD-c5X" id="edw-GG-Hln"/>
                 <outlet property="imgRingStreak" destination="H20-2j-5F0" id="51Z-31-k1W"/>
                 <outlet property="lbStreakCount" destination="CbS-VQ-UW5" id="kjG-fP-yTO"/>
+                <outlet property="lbTotal" destination="hZI-r2-WJO" id="HE5-t9-cJs"/>
                 <outlet property="scrollViewContainer" destination="NMm-yR-kqt" id="mYo-ed-se3"/>
                 <outlet property="streakView" destination="uEk-Vh-I42" id="xqC-Bs-Cyp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -25,17 +26,24 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hZI-r2-WJO">
+                            <rect key="frame" x="8" y="13" width="304" height="21"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <view contentMode="scaleToFill" id="322-XD-c5X" customClass="GKBarGraph">
-                            <rect key="frame" x="8" y="8" width="304" height="200"/>
+                            <rect key="frame" x="8" y="40" width="304" height="200"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <view contentMode="scaleToFill" id="uEk-Vh-I42">
-                            <rect key="frame" x="60" y="240" width="200" height="200"/>
+                            <rect key="frame" x="60" y="248" width="200" height="200"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hive.png" id="AyP-SB-OhA">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bee60.png" id="AyP-SB-OhA">
                                     <rect key="frame" x="69" y="52" width="60" height="60"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                     <animations/>
@@ -58,7 +66,7 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="t7l-uw-22v">
-                            <rect key="frame" x="85" y="455" width="150" height="40"/>
+                            <rect key="frame" x="85" y="456" width="150" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
                             <state key="normal" title="Share" backgroundImage="button_short.png">
@@ -78,8 +86,8 @@
         </view>
     </objects>
     <resources>
+        <image name="bee60.png" width="60" height="60"/>
         <image name="button_short.png" width="150" height="40"/>
-        <image name="hive.png" width="60" height="60"/>
         <image name="streak_ring.png" width="200" height="200"/>
     </resources>
 </document>
